fixed date slider overflow screoll

--- a/src/client/assets/styles/shared/CollapsibleBar.scss
+++ b/src/client/assets/styles/shared/CollapsibleBar.scss
@@ -12,6 +12,10 @@
     max-width: 1756px;
     margin: auto;
     padding-inline: 2%;
+    overflow: scroll;
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__btm__area{
@@ -31,6 +35,10 @@
 
   &__date__area{
     border-left: 1px solid var(--color-white);
+    width: 437px;
+    @media (max-width: 550px) {
+      width: 300px;
+    }
 
     // @media (max-width: 991px) {
     //   &:nth-child(3), &:nth-child(4){
@@ -120,12 +128,17 @@ padding-left: 5px;
     grid-template-columns: repeat(4, 1fr);
     // justify-content: space-between;
     grid-gap: 5px;
+    
     }
 
     &__dot__wrp{
       display: flex;
       justify-content: space-between;
       grid-gap: 2px;
+      width: 437px;
+      @media (max-width: 550px) {
+        width: 300px;
+      }
     }
 
   &__dot{
@@ -142,6 +155,11 @@ padding-left: 5px;
       width: 4px;
       height: 6px;
     }
+  }
+
+  &__btm__wrp{
+    // width: 1700px;
+    // overflow-x: scroll;
   }
 }
 
